# DecimalComputerEmulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  resources.qrc
src/: main.cpp
src/assembler/: Assembler.cpp  Assembler.h  Disassembler.cpp  Disassembler.h
src/core/: CPU.cpp  CPU.h  Computer.cpp  Computer.h  Config.h  Memory.cpp  Memory.h
src/gui/: CpuStats.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
src/qml/: PieChart.qml
